--- a/vagrant-fanclub/package.json
+++ b/vagrant-fanclub/package.json
@@ -6,10 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.3",
+    "axios-cookiejar-support": "^5.0.2",
     "bootstrap": "^5.3.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "tough-cookie": "^4.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
