--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config index.js"
+    "start": "nodemon -r dotenv/config index.js",
+    "dev": "concurrently \"npm start\" \"npm --prefix ./vagrant-fanclub start\""
   },
   "dependencies": {
-    "axios": "x",
+    "axios": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "x",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
@@ -20,7 +21,8 @@
     "session": "^0.1.0"
   },
   "devDependencies": {
-    "nodemon": "x"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.4"
   },
   "author": "",
   "license": "ISC"
