--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "youtube-project",
   "version": "1.0.0",
   "description": "learning to use youtube api",
-  "main": "index.js",
+  "main": "index.cjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config index.js",
+    "start": "nodemon -r dotenv/config index.cjs",
     "dev": "concurrently \"npm start\" \"npm --prefix ./vagrant-fanclub start\""
   },
+  "type": "module",
   "dependencies": {
     "axios": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -15,7 +16,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
     "session": "^0.1.0"
